Fix the overflow in the nav banner, unhiding 'misc'

--- a/theme/static/css/nwcpp.css
+++ b/theme/static/css/nwcpp.css
@@ -1,6 +1,9 @@
 @import url("main.css");
 
-/* Main Nav */
+/* Main Nav Banner */
 #banner nav {
-  height: 80px;
+    height: 80px;
+}
+#banner nav a:link, #banner nav a:visited {
+    padding: 5px 1.1em;
 }
